# desktop-engine

./: .gitignore  README.md  build.sh  buildrun.sh  cleanbuildrun.sh  configure.sh  run.sh
assets/: fragment.glsl  fragment.shader  vertex.glsl  vertex.shader
src/: CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  VertexBuffer.cpp  VertexBuffer.h  main.cpp
src/Components/: CMakeLists.txt  Component.cpp  Component.h  MeshComponent.cpp  MeshComponent.h
src/Core/: XWindow.cpp  XWindow.h
src/Core/Components/: CMakeLists.txt  Component.cpp  Component.h  ModelComponent.cpp  ModelComponent.h  TransformComponent.cpp  TransformComponent.h
src/Core/Engine/: CMakeLists.txt  Component.cpp  Component.h  Mesh.cpp  Mesh.h  MeshComponent.cpp  MeshComponent.h  Object.cpp  Object.h  TransformComponent.cpp  TransformComponent.h
src/Core/Math/: CMakeLists.txt  Vector2.hpp  Vector3.hpp
src/Core/OpenGL/: CMakeLists.txt  GLBufferObject.cpp  GLBufferObject.h  GLObject.cpp  GLObject.h  IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/Core/Windowing/: CMakeLists.txt
src/Events/: CMakeLists.txt  Event.cpp  Event.h  EventManager.cpp  EventManager.h  IListener.h  TestListener.hpp
src/Loaders/: AssetLoader.cpp  AssetLoader.h  CMakeLists.txt
src/Math/: CMakeLists.txt  Matrix4x4.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
src/Renderer/: CMakeLists.txt  IMeshShader.h  IRenderer.cpp  IRenderer.h  Mesh.cpp  Mesh.h
src/Renderer/GL/: CMakeLists.txt  GLBufferObject.cpp  GLBufferObject.h  GLIndexBuffer.cpp  GLIndexBuffer.h  GLMeshShader.cpp  GLMeshShader.h  GLObject.cpp  GLObject.h  GLRenderer.cpp  GLRenderer.h  GLShader.cpp  GLShader.h  GLShaderProgram.cpp  GLShaderProgram.h  GLVertexArray.cpp  GLVertexArray.h  GLVertexBuffer.cpp  GLVertexBuffer.h
src/Windowing/: CMakeLists.txt  EngineWindow.cpp  EngineWindow.h  IWindowingStrategy.h
src/Windowing/X11/: CMakeLists.txt  GLXGraphicsStrategy.cpp  GLXGraphicsStrategy.h  IXGraphicsStrategy.h  XWindowingStrategy.cpp  XWindowingStrategy.h
src/World/: CMakeLists.txt  Node.cpp  Node.h  WorldCamera.cpp  WorldCamera.h  WorldObject.cpp  WorldObject.h
