cmake_minimum_required(VERSION 3.26.3)
project(desktop-engine)

add_executable(${PROJECT_NAME} main.cpp)

add_subdirectory(${PROJECT_SOURCE_DIR}/Events/)
add_subdirectory(${PROJECT_SOURCE_DIR}/Windowing/)
add_subdirectory(${PROJECT_SOURCE_DIR}/Windowing/X11/)
add_subdirectory(${PROJECT_SOURCE_DIR}/Loaders/)
add_subdirectory(${PROJECT_SOURCE_DIR}/Renderer/)
add_subdirectory(${PROJECT_SOURCE_DIR}/Renderer/GL/)
add_subdirectory(${PROJECT_SOURCE_DIR}/World/)
add_subdirectory(${PROJECT_SOURCE_DIR}/Math/)

target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCE_DIR})
target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/Events/)
target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/Windowing/)
target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/Windowing/X11/)
target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/Loaders/)
target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/Renderer/)
target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/Renderer/GL/)
target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/World/)
target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/Math/)

target_include_directories(${PROJECT_NAME} PUBLIC /usr/include/)
target_link_directories(${PROJECT_NAME} PRIVATE /usr/lib/)
target_link_libraries(${PROJECT_NAME} X11 GL GLEW assimp)